Ability to open a scene file